Workspace_Humanoid/.metadata/.plugins/org.eclipse.cdt.ui/Humanoid_Blackbill2.build.log
16:28:29 **** Incremental Build of configuration Debug for project Humanoid_Blackbill2 ****
make -j3 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F401xC -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c:94:9: error: 'TIM_HandleTypeDef' has no member named 'PWM_Left_Channel'
   94 |         .PWM_Left_Channel = TIM_CHANNEL_2
      |         ^
../Core/Src/main.c:95:9: error: request for member 'PWM_Right_Channel' in something not a structure or union
   95 |         .PWM_Right_Channel = TIM_CHANNEL_1
      |         ^
../Core/Src/main.c:107:9: error: 'TIM_HandleTypeDef' has no member named 'PWM_Left_Channel'
  107 |         .PWM_Left_Channel = TIM_CHANNEL_3
      |         ^
../Core/Src/main.c:108:9: error: request for member 'PWM_Right_Channel' in something not a structure or union
  108 |         .PWM_Right_Channel = TIM_CHANNEL_4
      |         ^
../Core/Src/main.c: In function 'HAL_UART_RxCpltCallback':
../Core/Src/main.c:735:25: warning: implicit declaration of function 'OpenHand' [-Wimplicit-function-declaration]
  735 |                         OpenHand();
      |                         ^~~~~~~~
../Core/Src/main.c:738:25: warning: implicit declaration of function 'CloseHand' [-Wimplicit-function-declaration]
  738 |                         CloseHand();
      |                         ^~~~~~~~~
make: *** [Core/Src/subdir.mk:37: Core/Src/main.o] Error 1
"make -j3 all" terminated with exit code 2. Build might be incomplete.

16:28:30 Build Failed. 5 errors, 2 warnings. (took 1s.45ms)

